# build-quality-agent

./: .env.example  CONTRIBUTING.md  README.md  README.zh-CN.md  pyproject.toml
.github/: FUNDING.yml
build_quality_agent/: __init__.py  __main__.py  mcp_server.py  reviewer.py  runner.py
scripts/: install-hook.sh
tests/: test_mcp_server.py  test_reviewer.py  test_runner.py
