[project]
name = "build-quality-agent"
version = "0.4.0"
description = "Claude-powered git pre-push diff reviewer for indie OSS projects."
authors = [{ name = "Alex Ji", email = "alex@vibexforge.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.40",
    "solo-founder-os>=0.1.0",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
keywords = ["git-hook", "pre-push", "code-review", "claude", "anthropic", "indie"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
build-quality-agent = "build_quality_agent.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[project.urls]
Repository = "https://github.com/alex-jb/build-quality-agent"
Issues = "https://github.com/alex-jb/build-quality-agent/issues"
Homepage = "https://github.com/alex-jb/build-quality-agent"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["build_quality_agent"]
